--- a/blog.html
+++ b/blog.html
@@ -9,26 +9,19 @@
     <body>
         <div class="wrapper">
             <header class="base_header">
-                <h2 class="header_text" id="generated_text">Welcome to Jacob's site! </h2>
+                <h2 class="header_text" id="generated_text">Welcome to this "blog"... that has "posts"... </h2>
             </header>
             <div class="base_content">
                 <aside class="base_sidebar">
-                    <a class="sidebar_item sidebar_item_active" href="./index.html">Home</a>
+                    <a class="sidebar_item" href="./index.html">Home</a>
                     <a class="sidebar_item" href="./portfolio.html">Portfolio</a>
-                    <a class="sidebar_item" href="./blog.html">Blog "Posts"</a>
+                    <a class="sidebar_item sidebar_item_active" href="./blog.html">Blog "Posts"</a>
                     <a class="sidebar_item" href="./updates.html">Updates</a>
                 </aside>
                 <main class="base_main">
                     <div class="main_content">
                         <p>
-                            Hi, I'm Jacob!<br /><br />
-                            I'm a Software Engineer, currently based in the Seattle area. Right now I'm working at Visa on payment gateways.
-                            Formerly, I worked at PNC Bank as a Full Stack Software Engineer and a Quality Engineer Lead, where I contributed to site modernization efforts that impact over 9 million users.
-                            I'm also persuing my master's degree for Computer Science at Georgia Tech, with a specialization in Computing Systems. I'm currently 10% of the way done, and hoping to finish eventually.<br /><br />
-
-                            In my free time, I like reading, rock climbing, playing ultimate frisbee, learning Mandarin, and exploring the great outdoors.<br /><br />
-
-                            If you'd like to connect (I'd love to, personally!), you can email me at <a href="mailto:jacobpmusone@gmail.com">jacobpmusone@gmail.com</a> or reach out to me on <a href="https://www.linkedin.com/in/jacobmusone/" target="_blank" rel="noopener noreferrer">LinkedIn</a>.
+                            idek if I'll ever use this tbh but here it is ig
                         </p>
                     </div>
                 </main>
@@ -38,7 +31,7 @@
                 <a class="footer_item" href="https://www.linkedin.com/in/jacobmusone/" target="_blank" rel="noopener noreferrer">@LinkedIn</a>
                 <a class="footer_item" href="https://github.com/jmusone" target="_blank" rel="noopener noreferrer">@GitHub</a>
                 <a class="footer_item" href="mailto:jacobpmusone@gmail.com">@email</a>
-                <p class="footer_item">Made by Jacob in 20XX</p>
+                <p class="footer_item"> Made by Jacob in 20XX</p>
             </footer>
         </div>
         <script src="js/title_text_gen.js"></script>
