Remove file type from links for github pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,10 +13,10 @@
             </header>
             <div class="base_content">
                 <aside class="base_sidebar">
-                    <a class="sidebar_item" href="./index.html">Home</a>
-                    <a class="sidebar_item sidebar_item_active" href="./portfolio.html">Portfolio</a>
-                    <a class="sidebar_item" href="./blog.html">Blog "Posts"</a>
-                    <a class="sidebar_item" href="./updates.html">Updates</a>
+                    <a class="sidebar_item" href="./">Home</a>
+                    <a class="sidebar_item sidebar_item_active" href="./portfolio">Portfolio</a>
+                    <a class="sidebar_item" href="./blog">Blog "Posts"</a>
+                    <a class="sidebar_item" href="./updates">Updates</a>
                 </aside>
                 <main class="base_main">
                     <div class="main_content">
