--- a/blog.html
+++ b/blog.html
@@ -13,15 +13,15 @@
             </header>
             <div class="base_content">
                 <aside class="base_sidebar">
-                    <a class="sidebar_item" href="./index.html">Home</a>
-                    <a class="sidebar_item" href="./portfolio.html">Portfolio</a>
-                    <a class="sidebar_item sidebar_item_active" href="./blog.html">Blog "Posts"</a>
-                    <a class="sidebar_item" href="./updates.html">Updates</a>
+                    <a class="sidebar_item" href="./">Home</a>
+                    <a class="sidebar_item" href="./portfolio">Portfolio</a>
+                    <a class="sidebar_item sidebar_item_active" href="./blog">Blog "Posts"</a>
+                    <a class="sidebar_item" href="./updates">Updates</a>
                 </aside>
                 <main class="base_main">
                     <div class="main_content">
                         <p>
-                            idek if I'll ever use this tbh but here it is ig
+                            I don't have anything interesting to say yet. Maybe try again later?
                         </p>
                     </div>
                 </main>
