--- a/updates.html
+++ b/updates.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
     <link href='fonts.googleapis.com' rel='stylesheet'>
+    <link rel="icon" type="image/x-icon" href="media/favicon.ico">
+    <title>Jacob's Life</title>
 </head>
 <body>
     <div class="wrapper">
